<resources>
    <string name="app_name" translatable="false">Daily Anime</string>

    <string name="search_filter_title">Filter</string>
    <string name="search_filter_reset">Reset</string>
    <string name="search_filter_apply">Apply</string>
    <string name="search_filter_show_more_title">Show more</string>
    <string name="search_filter_collapse_title">Collapse</string>

    <string name="anime_search_filter_genre">Genre</string>
    <string name="anime_search_filter_theme">Theme</string>
    <string name="anime_search_filter_audience">Audience</string>
    <string name="anime_search_filter_season">Season</string>
    <string name="anime_search_filter_status">Status</string>
    <string name="anime_search_filter_kind">Type</string>
    <string name="anime_search_filter_duration">Episode duration</string>
    <string name="anime_search_filter_rating">Age rating</string>

    <string name="anime_status_anons">Announced</string>
    <string name="anime_status_ongoing">Ongoing</string>
    <string name="anime_status_released">Released</string>
    <string name="anime_status_latest">Release recently</string>

    <string name="unauthorized_title_personal_list">Sign in to continue</string>
    <string name="unauthorized_title_profile">Login to account to follow your progress</string>
    <string name="unauthorized_sign_in">Log In</string>
    <string name="unauthorized_sign_up">Sign Up</string>
    <string name="unauthorized_navigation_profile">Navigate to profile</string>

    <string name="profile_history">History</string>
    <string name="profile_statistics">Statistics</string>
    <string name="profile_achievements">Achievements</string>
    <string name="profile_favourites">Favourites</string>
    <string name="profile_logout">Log Out</string>

    <string name="history_empty_state">Your history is empty</string>

    <string name="settings_toolbar_title">Settings</string>
    <string name="settings_dark_theme">Enable dark theme</string>
    <string name="settings_version_name">Version:</string>
    <string name="settings_theme_section">Theme</string>
    <string name="settings_dark_theme_title">Dark mode</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_amoled">Amoled</string>
    <string name="settings_about_section">About</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_navigation_section">Navigation</string>
    <string name="settings_initial_tab_page">Section by default</string>
    <string name="settings_order_of_statuses">Order of statuses</string>
    <string name="settings_notification_section">Notifications</string>
    <string name="settings_notification_title">Enable Daily Notifications</string>
    <string name="settings_notification_subtitle">Notifications will be sent every day at a certain time.</string>
    <string name="settings_notification_time_title">Notification Time</string>
    <string name="settings_storage_title">Storage</string>
    <string name="settings_image_cache_title">Image cache</string>
    <string name="settings_image_cache_used_title">%1$s / %2$s used</string>
    <string name="settings_max_image_cache_title">Max image cache</string>
    <string name="settings_image_cache_clear_title">Clear image cache</string>
    <string name="settings_content_section">Content</string>
    <string name="settings_adult_content_title">Show +18 content</string>
    <string name="settings_select_interests_title">Select interests</string>

    <string name="notification_daily_description">Do not forget to track you progress in the app!</string>

    <string name="stats_toolbar_title">Statistics</string>
    <string name="stats_header_scores">Scores</string>
    <string name="stats_header_types">Types</string>
    <string name="stats_header_lists">Lists</string>
    <string name="stats_status_planned">Planned</string>
    <string name="stats_status_completed">Completed</string>
    <string name="stats_status_dropped">dropped</string>
    <string name="stats_status_on_hold">On hold</string>
    <string name="stats_status_watching">Watching</string>

    <string name="anime_details_description_title">Synopsis</string>
    <string name="anime_details_related_title">Related</string>
    <string name="anime_details_characters_title">Characters</string>
    <string name="anime_details_anime_title">Anime</string>
    <string name="anime_details_seiyu_title">Seiyū</string>
    <string name="anime_details_screenshots_title">Screenshots</string>
    <string name="anime_details_video_title">Video</string>
    <string name="anime_details_date">Release date</string>
    <string name="anime_details_status">Status</string>
    <string name="anime_details_episodes_title">Episodes</string>
    <string name="anime_details_type_title">Type</string>
    <string name="anime_details_episode_date">A few moments</string>
    <string name="anime_details_episode_time_title">Episode time</string>
    <string name="anime_details_episode_time">%1$s min</string>
    <string name="anime_details_date_next_episode">Up to %1$d episode</string>
    <string name="anime_details_age_rating_title">Age rating</string>

    <string name="anime_details_age_rating_g">All ages</string>
    <string name="anime_details_age_rating_pg">For children</string>
    <string name="anime_details_age_rating_pg_13">13+</string>
    <string name="anime_details_age_rating_r">17+</string>
    <string name="anime_details_age_rating_r_plus">18+</string>
    <string name="anime_details_age_rating_rx">Hentai</string>
    <string name="anime_details_state_error_title">Try again</string>

    <string name="anime_personal_list_ribbon_status_planned">Planned</string>
    <string name="anime_personal_list_ribbon_status_watching">Watching</string>
    <string name="anime_personal_list_ribbon_status_rewatching">Re-watching</string>
    <string name="anime_personal_list_ribbon_status_completed">Completed</string>
    <string name="anime_personal_list_ribbon_status_on_hold">Hold on</string>
    <string name="anime_personal_list_ribbon_status_dropped">Abandoned</string>
    <string name="personal_list_select_order_name">Name</string>
    <string name="personal_list_select_order_progress">Progress</string>
    <string name="personal_list_select_order_score">Score</string>
    <string name="personal_list_select_order_episodes">Episodes</string>
    <string name="edit_rate_status_watching">Watching</string>
    <string name="edit_rate_status_planned">Planned</string>
    <string name="edit_rate_status_rewatching">Re-watching</string>
    <string name="edit_rate_status_completed">Watched</string>
    <string name="edit_rate_status_on_hold">Hold on</string>
    <string name="edit_rate_status_dropped">Abandoned</string>
    <string name="edit_rate_status_none">Status absent</string>
    <string name="edit_rate_episodes_title">Watched:</string>
    <string name="edit_rate_episodes_header">Episodes</string>
    <string name="edit_rate_comment_header">Comment</string>
    <string name="edit_rate_score_header">Score</string>
    <string name="edit_rate_create_success">Anime has been created successfully!</string>
    <string name="edit_rate_update_success">Anime has been updated successfully!</string>
    <string name="edit_rate_error">Error is present :(</string>
    <string name="edit_rate_reset_title">Reset</string>
    <string name="edit_rate_create_title">Create</string>
    <string name="edit_rate_update_title">Update</string>
    <string name="edit_rate_status_title">Status</string>
    <string name="edit_rate_score_title">Score</string>
    <string name="edit_rate_status_no_status">Select</string>

    <string name="general_error">Something went wrong</string>
    <string name="general_no_internet_error">No internet. Check your connection</string>
    <string name="general_no_app_view">No application found to proceed authorization</string>

    <string name="anime_chronology_title">Chronology</string>
    <string name="anime_similar_title">Similar</string>

    <string name="filter_cell_season_old_enough">More old</string>

    <string name="bottom_navigation_personal_lists">Lists</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_calendar">Calendar</string>
    <string name="bottom_navigation_search">Search</string>
    <string name="bottom_navigation_profile">Profile</string>
    <string name="personal_list_empty_state">Category has no elements</string>
    <string name="search_placeholder_hint">Code Geass</string>
    <string name="anime_toolbar_similar">Similar</string>
    <string name="anime_toolbar_chronology">Chronology</string>
    <string name="anime_toolbar_stats">Stats</string>
    <string name="toolbar_title_similar">Similar</string>
    <string name="calendar_search_placeholder_hint">Upcoming anime</string>
    <string name="personal_list_search_placeholder_hint">Anime</string>

    <string name="cell_episode">Episode %d</string>

    <string name="anime_kind_tv">TV</string>
    <string name="anime_kind_film">Movie</string>
    <string name="anime_kind_ova">Ova</string>
    <string name="anime_kind_ona">Ona</string>
    <string name="anime_kind_special">Special</string>
    <string name="anime_kind_tv_special">TV special</string>
    <string name="anime_kind_music">Music</string>
    <string name="anime_kind_promo">Promo</string>
    <string name="anime_kind_ad">Ad</string>
    <string name="select_status_dialog_title">Select status</string>
    <string name="select_section_dialog_title">Select section</string>

    <string name="anime_score_1">It couldn\'t be worse</string>
    <string name="anime_score_2">Terrible</string>
    <string name="anime_score_3">Very bad</string>
    <string name="anime_score_4">Badly</string>
    <string name="anime_score_5">More or less</string>
    <string name="anime_score_6">Fine</string>
    <string name="anime_score_7">Good</string>
    <string name="anime_score_8">Great</string>
    <string name="anime_score_9">Fabulous</string>
    <string name="anime_score_10">Epic win!</string>

    <string name="language_disclaimer_title" translatable="false">Language disclaimer</string>
    <string name="language_disclaimer_description" translatable="false">While using app you can see that content has no translations. It`s expected behavior, only russian translation is supported by API.\nThanks for attention</string>
    <string name="language_disclaimer_positive" translatable="false">Ok</string>

    <string name="ribbon_empty_state_description">Navigate to search screen to see available animes for tracking</string>
    <string name="ribbon_empty_state_title">You have no anime to track</string>

    <string name="home_title">Welcome back</string>
    <string name="home_title_authorized">Welcome back,\n%s</string>
    <string name="home_calendar_title">New this week</string>

    <string name="reorder_statuses_title">Change order</string>
    <string name="reorder_statuses_button_save_title">Save</string>

    <string name="timepicker_save_title">Save</string>
    <string name="details_synopsis_label_show_less">Show less</string>
    <string name="details_synopsis_label_show_more">… Show more</string>

    <string name="section_history_title">Latest history</string>

</resources>

